[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_proc_macro = { path = "./my_proc_macro" }
hello_world_proc_macro = { path = "./hello_world_proc_macro" }
make-public-macro = { path = "./make-public-macro" }
